Misterio/src/css/report.css
.Counter {
    color: white;
}

.Counter button{
    background-color: #02c0ba;
    border: none;
    font-size: 80%;
    cursor: pointer;
    border-radius: 10px;
}

.Report {
    color: white;
    width: 25%;
    height: 65%;
    transform: translate(0%, 17%);
    position: absolute;
}

.Report h3 {
    font-family: 'Special Elite', cursive;
    font-size: 100%;
}

.column-mis, .column-te, .column-rio, .solution-box{
    float: left;
    width: 50%;
    height: 50%;
}


.column-mis, .column-te, .column-rio {
    position: relative;
    font-size: 80%;
    font-family: 'Merriweather', serif;
}

.solution-header{
    position: relative;
    color: white;
    font-size: 80%;
    font-family: 'Special Elite', cursive;
}

.select{
    width: 100%;
    font-size: 80%;
    margin-top: 5%;
}

